--- a/Pipfile
+++ b/Pipfile
@@ -4,10 +4,13 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+requests = "*"
+halo = "*"
 flask = "*"
+gunicorn = "*"
+psycopg2 = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
-python_full_version = "3.10.12"
+python_version = "3.13"
